# Static-Program-Analyzer

./: README.md
Team41/Code41/src/autotester/: CMakeLists.txt
Team41/Code41/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team41/Code41/src/spa/: CMakeLists.txt
Team41/Code41/src/spa/src/: PKB.cpp  PQLTable.cpp  PQLTable.h  QueryEvaluator.cpp  QueryEvaluator.h  TNode.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Team41/Code41/src/spa/src/Adapters/: NextKBAdapter.cpp  NextKBAdapter.h  README.md
Team41/Code41/src/spa/src/Cache/: Cache.cpp  Cache.h
Team41/Code41/src/spa/src/Common/: AstBuilder.cpp  AstBuilder.h  CFGBuilder.cpp  CFGBuilder.h  CFGNode.cpp  CFGNode.h  CFGUtils.cpp  CFGUtils.h  FileReader.cpp  FileReader.h  StringUtils.cpp  StringUtils.h  TNode.cpp  TNode.h  TNodeType.h  TreeUtils.cpp  TreeUtils.h
Team41/Code41/src/spa/src/DesignExtractor/: CFGExtractor.cpp  CFGExtractor.h  CallsExtractor.cpp  CallsExtractor.h  DesignExtractor.cpp  DesignExtractor.h  DesignExtractorUtils.cpp  DesignExtractorUtils.h  EntitiesExtractor.cpp  EntitiesExtractor.h  FollowsExtractor.cpp  FollowsExtractor.h  ModifiesExtractor.cpp  ModifiesExtractor.h  ParentExtractor.cpp  ParentExtractor.h  PatternExtractor.cpp  PatternExtractor.h  UsesExtractor.cpp  UsesExtractor.h
Team41/Code41/src/spa/src/Exception/: ParseException.cpp  ParseException.h  SPAException.cpp  SPAException.h  SemanticException.cpp  SemanticException.h  SyntaxException.cpp  SyntaxException.h  SyntheticException.cpp  SyntheticException.h  TokenizeException.cpp  TokenizeException.h
Team41/Code41/src/spa/src/PKB/: CallsTable.cpp  CallsTable.h  EntityTable.cpp  EntityTable.h  FollowsTable.cpp  FollowsTable.h  ManyToMany.h  ManyToMany.tpp  ModifiesTable.cpp  MultiMap.h  (+29 more)
(+812 files in other folders)
